# fossroot

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/fossroot/: Cargo.toml
crates/fossroot-agent/: Cargo.toml
crates/fossroot-agent/src/: browser.rs  main.rs  protocol.rs  register.rs  rpc.rs  smartcard.rs
crates/fossroot-core/: Cargo.toml
crates/fossroot-core/src/: bundle.rs  certs.rs  diff.rs  lib.rs  store.rs  verify.rs
crates/fossroot-core/src/store/: linux.rs  macos.rs  windows.rs
crates/fossroot-core/tests/: real_bundle.rs  store_roundtrip.rs
crates/fossroot-pdf/: Cargo.toml
crates/fossroot-pdf/src/: fields.rs  lib.rs  sign.rs
crates/fossroot-pdf/tests/: enumerate_2096.rs  sign_roundtrip.rs
crates/fossroot/src/: cli.rs  gui.rs  main.rs
docs/: cli-output.txt
extension/: README.md  manifest.json  popup.html  popup.js
extensions/cac-reset/: README.md  background.js  manifest.json  popup.html  popup.js
