[workspace]
resolver = "2"
members = ["crates/fossroot-core", "crates/fossroot"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danielneustadter/fossroot"
authors = ["Daniel Neustadter"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
