[package]
name = "fossroot-agent"
description = "Native-messaging host bridging the Fossroot browser extension to the local trust store and CAC engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
fossroot-core = { path = "../fossroot-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_UI_WindowsAndMessaging",
] }
