[package]
name = "fossroot-pdf"
description = "PDF signature-field enumeration and CAC/CMS incremental-update signing for the FossRoot suite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lopdf = "0.44"
sha2 = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
