[package]
name = "fossroot"
description = "Open-source, cross-platform manager for DoD PKI CA certificate trust stores"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
fossroot-core = { path = "../fossroot-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
